--- a/index.html
+++ b/index.html
@@ -4,11 +4,128 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Лиза моя девушка</title>
+    <title>Проект</title>
   </head>
   <body>
     <div>
-      <h1></h1>
+      <header>
+        <nav>
+          <!-- logo -->
+          <a href="#"> </a>
+          <ui>
+            <li><a href="#">Наші традиції</a></li>
+            <li><a href="#">Шеф-кухарі</a></li>
+            <li><a href="#">Формати</a></li>
+            <li><a href="#">Контакти</a></li>
+          </ui>
+        </nav>
+        <button type="button">Замовити дзвінок</button>
+      </header>
+      <main>
+        <sections>
+          <h1>Сучасна пекарня</h1>
+        </sections>
+        <sections>
+          <ui>
+            <li>Великий попит на ринку</li>
+            <li>Доступні за бюджетом формати</li>
+            <li>Досвідчена управлінська команда</li>
+          </ui>
+          <h2>Новий формат традицій</h2>
+          <p>
+            <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
+            зберегла смак традиційної випічки та натуральність інгредієнтів.
+          </p>
+
+          <p>
+            Ми працюємо як найвідоміші мережі—
+            <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень
+            стильний дизайн та висока якість обслуговування!
+          </p>
+        </sections>
+        <sections>
+          <h2>Наші найкращі шеф -кухарі</h2>
+          <ul>
+            <li>
+              <article>
+                <h3>Настя</h3>
+
+                <p>Привіт, я Настя!</p>
+
+                <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+
+                <p>Я випічу для вас найсмачніщі вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3>Влад</h3>
+                <p>Привіт, я Влад!</p>
+                <p>
+                  Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша
+                  любов, з якою ми ділимось кожен раз з Вами через нашу випічку!
+                </p>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </sections>
+        <sections>
+          <h2>Формати</h2>
+          <article>
+            <h3 lang="en">Walrus</h3>
+          </article>
+          <article>
+            <h3 lang="en">Horseshoe</h3>
+          </article>
+          <article>
+            <h3 lang="en">Handlebar</h3>
+          </article>
+        </sections>
+        <sections>
+          <h2>Приєднуйся до мережі пекарень</h2>
+        </sections>
+      </main>
+      <footer>
+        <nav>
+          <!-- logo -->
+          <a href="#"> </a>
+          <ui>
+            <li><a href="#">Наші традиції</a></li>
+            <li><a href="#">Шеф-кухарі</a></li>
+            <li><a href="#">Формати</a></li>
+            <li><a href="#">Контакти</a></li>
+          </ui>
+        </nav>
+
+        <address>
+          <ul>
+            <li><a href="tel:+ 380960000007">+ 38 (096) 000 00 07</a></li>
+            <li>
+              <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            </li>
+            <li>
+              <a href="https://maps.app.goo.gl/YHQeGgog7YzLb7199"
+                >Україна, м. Київ, вул. Січових Стрільців 54</a
+              >
+            </li>
+            <li>
+              <a href="">
+                <!-- facebook icon -->
+              </a>
+            </li>
+
+            <li>
+              <a href="">
+                <!-- instagram icon -->
+              </a>
+            </li>
+          </ul>
+
+          <a href="" target="_blank">Політика конфіденційності</a>
+          <p>© 2022 Дані захищені</p>
+        </address>
+      </footer>
     </div>
   </body>
 </html>
