--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <div>
       <header>
         <nav>
-          <!-- logo -->
-          <a href="#"> </a>
-          <ui>
+          <a href="#"
+            ><img src="images/logo.svg" alt="лого сучасна пекарня" />
+          </a>
+          <ul>
             <li><a href="#">Наші традиції</a></li>
             <li><a href="#">Шеф-кухарі</a></li>
             <li><a href="#">Формати</a></li>
             <li><a href="#">Контакти</a></li>
-          </ui>
+          </ul>
         </nav>
         <button type="button">Замовити дзвінок</button>
       </header>
@@ -26,11 +27,11 @@
           <h1>Сучасна пекарня</h1>
         </sections>
         <sections>
-          <ui>
+          <ul>
             <li>Великий попит на ринку</li>
             <li>Доступні за бюджетом формати</li>
             <li>Досвідчена управлінська команда</li>
-          </ui>
+          </ul>
           <h2>Новий формат традицій</h2>
           <p>
             <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
@@ -42,6 +43,7 @@
             <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень
             стильний дизайн та висока якість обслуговування!
           </p>
+          <img src="images/image 1560.jpg" alt="пекар" />
         </sections>
         <sections>
           <h2>Наші найкращі шеф -кухарі</h2>
@@ -88,8 +90,9 @@
       </main>
       <footer>
         <nav>
-          <!-- logo -->
-          <a href="#"> </a>
+          <a href="#"
+            ><img src="images/logo.svg" alt="лого сучасна пекарня" />
+          </a>
           <ui>
             <li><a href="#">Наші традиції</a></li>
             <li><a href="#">Шеф-кухарі</a></li>
