--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Проект</title>
+    <title>Сучасна пекарня</title>
   </head>
   <body>
     <div>
       <header>
         <nav>
-          <a href="#"
+          <a href="/"
             ><img src="images/logo.svg" alt="лого сучасна пекарня" />
           </a>
           <ul>
-            <li><a href="#">Наші традиції</a></li>
-            <li><a href="#">Шеф-кухарі</a></li>
-            <li><a href="#">Формати</a></li>
-            <li><a href="#">Контакти</a></li>
+            <li><a href="#traditions-section">Наші традиції</a></li>
+            <li><a href="#chefs-section">Шеф-кухарі</a></li>
+            <li><a href="#format-section">Формати</a></li>
+            <li><a href="#contacts-section">Контакти</a></li>
           </ul>
         </nav>
         <button type="button">Замовити дзвінок</button>
       </header>
       <main>
-        <sections>
+        <section>
           <h1>Сучасна пекарня</h1>
-        </sections>
-        <sections>
+        </section>
+        <section id="traditions-section">
           <ul>
             <li>Великий попит на ринку</li>
             <li>Доступні за бюджетом формати</li>
@@ -43,9 +43,9 @@
             <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень
             стильний дизайн та висока якість обслуговування!
           </p>
-          <img src="images/image 1560.jpg" alt="пекар" />
-        </sections>
-        <sections>
+          <img src="images/image1560.jpg" alt="пекар" />
+        </section>
+        <section id="chefs-section">
           <h2>Наші найкращі шеф -кухарі</h2>
           <ul>
             <li>
@@ -71,8 +71,8 @@
               </article>
             </li>
           </ul>
-        </sections>
-        <sections>
+        </section>
+        <section id="format-section">
           <h2>Формати</h2>
           <article>
             <h3 lang="en">Walrus</h3>
@@ -83,27 +83,35 @@
           <article>
             <h3 lang="en">Handlebar</h3>
           </article>
-        </sections>
-        <sections>
+        </section>
+        <section id="contacts-section">
           <h2>Приєднуйся до мережі пекарень</h2>
-        </sections>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.164054656815!2d30.488658576242102!3d50.45666967159328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2snl!4v1706283985632!5m2!1sru!2snl"
+            width="603"
+            height="595"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </section>
       </main>
       <footer>
         <nav>
           <a href="#"
             ><img src="images/logo.svg" alt="лого сучасна пекарня" />
           </a>
-          <ui>
+          <ul>
             <li><a href="#">Наші традиції</a></li>
             <li><a href="#">Шеф-кухарі</a></li>
             <li><a href="#">Формати</a></li>
             <li><a href="#">Контакти</a></li>
-          </ui>
+          </ul>
         </nav>
 
         <address>
           <ul>
-            <li><a href="tel:+ 380960000007">+ 38 (096) 000 00 07</a></li>
+            <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
             <li>
               <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
             </li>
@@ -126,7 +134,7 @@
           </ul>
 
           <a href="" target="_blank">Політика конфіденційності</a>
-          <p>© 2022 Дані захищені</p>
+          <p>&copy; 2022 Дані захищені</p>
         </address>
       </footer>
     </div>
